# gitea-migrate

./: .gitignore  Cargo.toml  README.md  credentials.txt
design/: system.drawio  usage.md
src/: main.rs
