[package]
name = "gitea-migrate"
version = "0.1.0"
edition = "2021"
authors = ["Max Gallup"]
readme = "README.md"
description = "A basic script that automatically migrates all github repositories to a gitea instance"
homepage = "basingse.org"
repository = "https://github.com/maxgallup/gitea-migrate"
license-file = "LICENSE"
license = "GPL-2.0-or-later"


[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
clap = { version = "3.1.9", features = ["derive"] }
